# serenity

./: .clang-format  CMakeLists.txt
.github/workflows/: cmake.yml
AK/: Assertions.cpp  Assertions.h  Base64.cpp  BufferedStream.h  CMakeLists.txt  CircularBuffer.cpp  ConstrainedStream.cpp  Coroutine.h  CountingStream.cpp  DOSPackedTime.cpp  Debug.h.in  DeprecatedFlyString.cpp  DeprecatedString.cpp  Error.cpp  FixedPoint.h  FlyString.cpp  Format.cpp  FuzzyMatch.cpp  GenericLexer.cpp  Hex.cpp  IntrusiveList.h  Iterator.h  JsonObject.cpp  JsonParser.cpp  JsonPath.cpp  JsonValue.cpp  LexicalPath.cpp  Math.h  MemoryStream.cpp  ModuleInterface.cppm  NumberFormat.cpp  OptionParser.cpp  Platform.h  PrintfImplementation.h  PublicMacros.h  Random.cpp  ReverseIterator.h  Singleton.h  StackInfo.cpp  Stream.cpp  (+21 more)
AK/Tests/: TestRefPtr.cpp
Kernel/: CMakeLists.txt  Process.h
Kernel/Arch/: init.cpp
Kernel/FileSystem/: VirtualFileSystem.cpp  VirtualFileSystem.h
Kernel/Memory/: MemoryManager.cpp
Kernel/Syscalls/: unlink.cpp
Ladybird/: .gitignore  AndroidPlatform.cpp  BrowserWindow.cpp  CMakeLists.txt  FontPluginQt.cpp  HelperProcess.cpp  HelperProcess.h  LaunchWebContent.cpp  LaunchWebContent.h  WebContentServiceAndroid.cpp  WebContentServiceAndroid.h  WebContentView.cpp  main.cpp
Ladybird/Qt/: BrowserWindow.cpp
Ladybird/WebContent/: CMakeLists.txt  WebContentBinder.cpp  WebContentBinder.h  WebContentThread.cpp  WebContentThread.h  main.cpp
Ladybird/android/: AndroidManifest.xml
Meta/: build-root-filesystem.sh  lint-clang-format.sh  run.py  run.sh
Meta/CMake/: common_options.cmake  (+9 more)
Toolchain/: BuildClang.sh
(+142 files in other folders)
